GeglNode: Freeze the GeglOperation when changing properties

https://bugzilla.gnome.org/show_bug.cgi?id=761547